* Fixed alignment of title and action buttons at headers of FiltersContainer, ItemDetails and Popup components

--- a/src/view/Application/Application.scss
+++ b/src/view/Application/Application.scss
@@ -931,6 +931,7 @@ svg * {
 .popup {
   --popup-text: var(--main-text-color);
   --popup-bg: var(--main-bg-color);
+  --popup-header-padding: 6px 12px 12px 12px;
   --popup-footer-padding: 2rem 1rem 1rem 1rem;
   --popup-content-padding: 0 1rem 1rem 1rem;
   --popup-close-btn: var(--list-item-icon-fill);
@@ -946,11 +947,23 @@ svg * {
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
 }
 
+.popup__header {
+  column-gap: 18px;
+
+  .close-btn {
+    align-self: flex-end;
+    flex: 0 0 auto;
+  }
+}
+
 .popup__title {
+  height: 40px;
+  line-height: 40px;
   font-weight: 300;
   font-size: 1.4rem;
   margin: 0;
   padding: 0;
+  flex: 1 1 auto;
 }
 
 .popup__footer {
