--- a/src/view/Components/FiltersContainer/FiltersContainer.scss
+++ b/src/view/Components/FiltersContainer/FiltersContainer.scss
@@ -15,14 +15,17 @@
   width: 100%;
   margin-bottom: 4px;
 
-  label {
+  .filters-heading__title {
+    height: 40px;
+    line-height: 40px;
+    margin: 0 30px 0 0;
+    font-size: 1.4rem;
+    font-weight: 300;
     color: var(--main-text-color);
   }
 
-  .filters-heading__title {
-    margin: 0 30px 0 0;
-    font-size: 26px;
-    font-weight: 300;
+  .close-btn {
+    align-self: flex-end;
   }
 }
 
@@ -97,7 +100,7 @@
   width: 100%;
 
   .filters-container {
-    padding: 12px;
+    padding: 6px 12px 12px 12px;
   }
 }
 
