--- a/src/view/Components/SelectReminderDialog/SelectReminderDialog.scss
+++ b/src/view/Components/SelectReminderDialog/SelectReminderDialog.scss
@@ -7,14 +7,6 @@
     align-items: flex-start;
   }
 
-  .popup__header {
-    column-gap: 18px;
-  }
-
-  .popup__title {
-    flex-grow: 1;
-  }
-
   .filters-row {
     flex-flow: column nowrap;
   }
@@ -27,9 +19,10 @@
     column-gap: 24px;
 
     label {
+      height: 40px;
+      line-height: 40px;
       font-size: 1.4rem;
       font-weight: 300;
-      line-height: 32px;
       margin: 0;
     }
 
@@ -39,6 +32,7 @@
       --btn-hover-icon-color: var(--list-item-hover-icon-fill);
 
       margin-left: auto;
+      align-self: flex-end;
     }
   }
 
