--- a/src/view/Views/Import/components/RulesDialog/Dialog/ImportRulesDialog.scss
+++ b/src/view/Views/Import/components/RulesDialog/Dialog/ImportRulesDialog.scss
@@ -6,14 +6,6 @@
     position: relative;
     align-items: flex-start;
   }
-
-  .popup__header {
-    column-gap: 24px;
-
-    .popup__title {
-      flex: 1 1 auto;
-    }
-  }
 }
 
 .rules-dialog {
@@ -42,9 +34,10 @@
   column-gap: 24px;
 
   label {
+    height: 40px;
+    line-height: 40px;
     font-size: 1.4rem;
     font-weight: 300;
-    line-height: 32px;
     margin: 0;
   }
 
@@ -54,6 +47,7 @@
     --btn-hover-icon-color: var(--list-item-hover-icon-fill);
 
     margin-left: auto;
+    align-self: flex-end;
   }
 }
 
